# use-meteorology

./: .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  CRATE_TEMPLATE.md  Cargo.toml  FORGES.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  RELEASE.md  RELEASING.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  facade-publish-readiness.yml  mirror.yml  publish-readiness.yml  release-plz-release.yml  sbom.yml
.gitlab/merge_request_templates/: default.md
crates/use-air-temperature/: Cargo.toml  README.md
crates/use-air-temperature/src/: lib.rs
crates/use-atmosphere/: Cargo.toml  README.md
crates/use-atmosphere/src/: lib.rs
crates/use-atmospheric-pressure/: Cargo.toml  README.md
crates/use-atmospheric-pressure/src/: lib.rs
crates/use-cloud/: Cargo.toml  README.md
crates/use-cloud/src/: lib.rs
crates/use-humidity/: Cargo.toml  README.md
crates/use-humidity/src/: lib.rs
crates/use-meteorology/: Cargo.toml  README.md
crates/use-meteorology/src/: lib.rs  prelude.rs
crates/use-precipitation/: Cargo.toml  README.md
crates/use-precipitation/src/: lib.rs
crates/use-pressure-system/: Cargo.toml  README.md
crates/use-pressure-system/src/: lib.rs
crates/use-weather-forecast/: Cargo.toml  README.md
crates/use-weather-forecast/src/: lib.rs
crates/use-weather-front/: Cargo.toml  README.md
crates/use-weather-front/src/: lib.rs
crates/use-weather-observation/: Cargo.toml  README.md
crates/use-weather-observation/src/: lib.rs
crates/use-wind/: Cargo.toml  README.md
crates/use-wind/src/: lib.rs
docs/: maintainer-release-flow.md
scripts/: bootstrap-dev-tools.ps1  bootstrap-dev-tools.sh  sync-mirrors.sh
