[workspace]
members = [
    "crates/use-meteorology",
    "crates/use-weather-observation",
    "crates/use-atmosphere",
    "crates/use-air-temperature",
    "crates/use-atmospheric-pressure",
    "crates/use-humidity",
    "crates/use-wind",
    "crates/use-cloud",
    "crates/use-precipitation",
    "crates/use-weather-front",
    "crates/use-pressure-system",
    "crates/use-weather-forecast",
]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/RustUse/use-meteorology"
rust-version = "1.95.0"
version = "0.1.0"

[workspace.dependencies]
use-air-temperature = { version = "0.1.0", path = "crates/use-air-temperature" }
use-atmosphere = { version = "0.1.0", path = "crates/use-atmosphere" }
use-atmospheric-pressure = { version = "0.1.0", path = "crates/use-atmospheric-pressure" }
use-cloud = { version = "0.1.0", path = "crates/use-cloud" }
use-humidity = { version = "0.1.0", path = "crates/use-humidity" }
use-meteorology = { version = "0.1.0", path = "crates/use-meteorology" }
use-precipitation = { version = "0.1.0", path = "crates/use-precipitation" }
use-pressure-system = { version = "0.1.0", path = "crates/use-pressure-system" }
use-weather-forecast = { version = "0.1.0", path = "crates/use-weather-forecast" }
use-weather-front = { version = "0.1.0", path = "crates/use-weather-front" }
use-weather-observation = { version = "0.1.0", path = "crates/use-weather-observation" }
use-wind = { version = "0.1.0", path = "crates/use-wind" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-weather-observation",
    "use-atmosphere",
    "use-air-temperature",
    "use-atmospheric-pressure",
    "use-humidity",
    "use-wind",
    "use-cloud",
    "use-precipitation",
    "use-weather-front",
    "use-pressure-system",
    "use-weather-forecast",
]
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
