[package]
name = "use-meteorology"
description = "Facade crate for primitive RustUse meteorology vocabulary"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-meteorology"
keywords = ["meteorology", "weather", "atmosphere", "forecast", "rustuse"]
categories = ["data-structures", "science"]

[dependencies]
use-air-temperature.workspace = true
use-atmosphere.workspace = true
use-atmospheric-pressure.workspace = true
use-cloud.workspace = true
use-humidity.workspace = true
use-precipitation.workspace = true
use-pressure-system.workspace = true
use-weather-forecast.workspace = true
use-weather-front.workspace = true
use-weather-observation.workspace = true
use-wind.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
